--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -15,6 +15,17 @@
 	}
 }
 
+.entry-content {
+	ol,
+	ul {
+		padding-left: 1.2rem;
+
+		li {
+			margin-bottom: $space-2;
+		}
+	}
+}
+
 // Post previews
 
 .preview {
