--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import 'layout/header';
 @import 'layout/navigation';
 @import 'layout/forms';
+@import 'layout/grid';
 @import 'layout/utilities';
 
 @import 'components/buttons';
