--- a/css/main.css
+++ b/css/main.css
@@ -2556,6 +2556,8 @@ Carousel
   .single-post .post-thumbnail img {
     height: auto !important;
     width: auto !important; }
+.single-post .widget_text {
+  width: 100%; }
 @media (min-width: 40em) {
   .single-post .post {
     margin-top: 4rem; }
